hs-bindgen/examples/golden/doxygen_docs.h

/**
 * @brief Callback function type
 *
 * @param event_type Type of event
 * @param user_data User-provided data
 * @return Handling result
 */
typedef int (*event_callback_t)(int event_type, void* user_data);
/**
 * @brief Structure with documented fields
 *
 * This structure demonstrates field documentation.
 */
typedef struct {
    /** @brief Unique identifier */
    uint32_t id;

    /** @brief Human-readable name */
    char name[64];

    /** @brief Configuration flags */
    uint32_t flags;

    /** @brief Optional callback function */
    event_callback_t callback;

    /** @brief User data for callback */
    void* user_data;
} /** Configuration struct */ config_t;
/**
 * @brief Enumeration with documented values
 *
 * This enum shows different status codes.
 */
typedef enum {
    /** @brief Operation successful */
    STATUS_OK = 0,

    /** @brief Invalid parameter provided */
    STATUS_INVALID_PARAM = -1,

    /** @brief Memory allocation failed */
    STATUS_NO_MEMORY = -2,

    /** @brief Operation timed out */
    STATUS_TIMEOUT = -3,

    /** @brief Generic error */
    STATUS_ERROR = -99
} /** Status Code */ status_code_t;
/**
 * @}
 */

/**
 * @defgroup advanced_features Advanced Features
 * @brief Advanced C and Doxygen features
 * @{
 */

/**
 * @brief Function with complex documentation
 *
 * This function demonstrates multiple documentation features:
 *
 * @par Description:
 * Performs complex data processing with multiple steps.
 *
 * @par Algorithm:
 * 10. Validate input parameters
 * 200. Allocate temporary buffers
 * 3000. Process data in chunks
 * 41235. Clean up resources
 *
 * @par Algorithm2:
 * @li Validate input parameters
 * @li Allocate temporary buffers
 * @li Process data in chunks
 * @li Clean up resources
 *
 * @par Example:
 * @code
 * config_t cfg = {
 *     .id = 1,
 *     .name = "test",
 *     .flags = 0,
 *     .callback = my_callback,
 *     .user_data = NULL
 * };
 *
 * status_code_t result = complex_function(&cfg, data, size);
 * if (result != STATUS_OK) {
 *     handle_error(result);
 * }
 * @endcode
 *
 * @param config Configuration structure
 * @param data Input data buffer
 * @param size Size of input data
 * @return Status code indicating success or failure
 *
 * @pre config must not be NULL
 * @pre data must not be NULL if size > 0
 * @post Output data is written to config->user_data
 *
 * @warning May return NULL if memory allocation fails
 * @warning Sets errno to EINVAL if parameters are invalid
 */
status_code_t complex_function(config_t* config, const uint8_t* data, size_t size);
// Function attributes: const and pure

int hash (char * s) __attribute__ ((pure));
int square (int x) __attribute__ ((const));