hs-bindgen/fixtures/doxygen_docs.rs


 This function demonstrates multiple documentation features:

 @par Description:
 Performs complex data processing with multiple steps.

 @par Algorithm:
 10. Validate input parameters
 200. Allocate temporary buffers
 3000. Process data in chunks
 41235. Clean up resources

 @par Algorithm2:
 @li Validate input parameters
 @li Allocate temporary buffers
 @li Process data in chunks
 @li Clean up resources

 @par Example:
 @code
 config_t cfg = {
     .id = 1,
     .name = "test",
     .flags = 0,
     .callback = my_callback,
     .user_data = NULL
 };

 status_code_t result = complex_function(&cfg, data, size);
 if (result != STATUS_OK) {
     handle_error(result);
 }
 @endcode

 @param config Configuration structure (see \ref config_t)
 @param data Input data buffer
 @param size Size of input data
 @return Status code indicating success or failure

 @pre config must not be NULL
 @pre data must not be NULL if size > 0
 @post Output data is written to config->user_data

 @warning May return NULL if memory allocation fails
 @warning Sets errno to EINVAL if parameters are invalid*/
    pub fn complex_function(
        config: *mut config_t,
        data: *const u8,
        size: usize,
    ) -> status_code_t;
}
unsafe extern "C" {
    pub fn hash(s: *mut ::std::os::raw::c_char) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn square(x: ::std::os::raw::c_int) -> ::std::os::raw::c_int;
}
